Removed Blog Images

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -404,7 +404,7 @@ p {
   font-weight: 700;
   margin-bottom: 10px;
   text-transform: uppercase;
-  color: #1c1c1c;
+  color: #fd9000;
 }
 
 .hero-content a {
